--- a/src/app/global.css
+++ b/src/app/global.css
@@ -164,7 +164,7 @@
         @apply text-muted mt-2 block text-sm;
     }
 
-    .WideBlock {
+    .wide-block {
         @apply col-span-5 flex flex-col gap-2;
     }
 
