Add display font

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -6,6 +6,7 @@
 @theme inline {
     --font-sans: var(--font-instrument-sans);
     --font-weight-medium: 530;
+    --font-display: var(--font-slackey);
 
     --color-background: var(--background);
     --color-foreground: var(--foreground);
