--- a/src/app/global.css
+++ b/src/app/global.css
@@ -192,7 +192,7 @@
 
     .mdx-content > p > img,
     .mdx-content > p > video {
-        @apply rounded-lg border border-[color:var(--color-glassy)];
+        @apply rounded-md border border-[color:var(--color-glassy)];
     }
 
     .mdx-content > p > a > img {
