--- a/src/app/global.css
+++ b/src/app/global.css
@@ -77,7 +77,7 @@
     --border: #e3e1de;
     --input: #e3e1de;
 
-    --ring: #e96e3a;
+    --ring: #ff5900;
 
     --chart-1: #3f96f3;
     --chart-2: #3aa65e;
@@ -116,7 +116,7 @@
     --border: #2e2e2e;
     --input: #2e2e2e;
 
-    --ring: #e96e3a;
+    --ring: #ff5900;
 
     --chart-1: #3f96f3;
     --chart-2: #3aa65e;
@@ -151,14 +151,10 @@
     }
 
     .wide-block {
-        @apply col-span-5;
+        @apply col-span-5 max-sm:-mx-4;
     }
 
-    .mdx-content > * {
-        @apply m-0;
-    }
-
-    .mdx-content > *:not(:first-child, h2, h3) {
+    .mdx-content > *:not(:first-child, h2, h3, .caption) {
         @apply mt-6;
     }
 
@@ -192,7 +188,7 @@
 
     .mdx-content > p > img,
     .mdx-content > p > video {
-        @apply rounded-md border border-[color:var(--color-glassy)];
+        @apply border-glassy w-full rounded-md border;
     }
 
     .mdx-content > p > a > img {
