--- a/src/app/global.css
+++ b/src/app/global.css
@@ -1,10 +1,13 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
 
+@custom-variant dark (&:is(.dark *));
+
 @plugin '@tailwindcss/typography';
 
 @theme inline {
     --font-sans: var(--font-instrument-sans);
+    --font-weight-regular: 430;
     --font-weight-medium: 530;
     --font-display: var(--font-slackey);
 
@@ -27,6 +30,10 @@
 
     --color-accent: var(--accent);
     --color-accent-foreground: var(--accent-foreground);
+    --color-accent-secondary: var(--accent-secondary);
+
+    --color-bright: var(--bright);
+    --color-bright-foreground: var(--bright-foreground);
 
     --color-muted: var(--muted);
     --color-muted-foreground: var(--muted-foreground);
@@ -37,47 +44,63 @@
     --color-card: var(--card);
     --color-card-foreground: var(--card-foreground);
 
-    --color-glassy: var(--glassy);
-    --color-glassy-secondary: var(--glassy-secondary);
-
     --radius-xs: calc(var(--radius) - 4px);
     --radius-sm: calc(var(--radius) - 2px);
     --radius-md: var(--radius);
     --radius-lg: calc(var(--radius) + 2px);
     --radius-xl: calc(var(--radius) + 4px);
     --radius-2xl: calc(var(--radius) + 6px);
+
+    --color-sidebar-ring: var(--sidebar-ring);
+    --color-sidebar-border: var(--sidebar-border);
+    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+    --color-sidebar-accent: var(--sidebar-accent);
+    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+    --color-sidebar-primary: var(--sidebar-primary);
+    --color-sidebar-foreground: var(--sidebar-foreground);
+    --color-sidebar: var(--sidebar);
+
+    --color-chart-5: var(--chart-5);
+    --color-chart-4: var(--chart-4);
+    --color-chart-3: var(--chart-3);
+    --color-chart-2: var(--chart-2);
+    --color-chart-1: var(--chart-1);
 }
 
 :root {
     --background: #ffffff;
-    --foreground: rgba(0, 0, 0, 0.83);
+    --foreground: rgba(0, 0, 0, 0.8);
 
     --card: #ffffff;
-    --card-foreground: rgba(0, 0, 0, 0.83);
+    --card-foreground: rgba(0, 0, 0, 0.8);
 
     --popover: #ffffff;
-    --popover-foreground: rgba(0, 0, 0, 0.83);
+    --popover-foreground: rgba(0, 0, 0, 0.8);
 
     --primary: #2a2a2a;
     --primary-foreground: #ffffff;
 
     --secondary: #f1f0ef;
-    --secondary-foreground: rgba(0, 0, 0, 0.83);
+    --secondary-foreground: rgba(0, 0, 0, 0.8);
 
     --muted: #f1f0ef;
     --muted-foreground: rgba(0, 0, 0, 0.5);
 
-    --accent: #f1f0ef;
-    --accent-foreground: rgba(0, 0, 0, 0.83);
+    --accent: rgba(0, 0, 0, 0.08);
+    --accent-foreground: rgba(0, 0, 0, 0.8);
+    --accent-secondary: rgba(0, 0, 0, 0.14);
+
+    --bright: #ff5900;
+    --bright-foreground: #ffffff;
 
     --destructive: #ed6f68;
 
     --radius: 0.625rem;
 
-    --border: #e3e1de;
-    --input: #e3e1de;
+    --border: var(--accent);
+    --input: var(--accent-secondary);
 
-    --ring: #ff5900;
+    --ring: var(--bright);
 
     --chart-1: #3f96f3;
     --chart-2: #3aa65e;
@@ -85,8 +108,14 @@
     --chart-4: #e96e3a;
     --chart-5: #a27aff;
 
-    --glassy: rgba(0, 0, 0, 0.08);
-    --glassy-secondary: rgba(0, 0, 0, 0.14);
+    --sidebar: var(--background);
+    --sidebar-foreground: var(--foreground);
+    --sidebar-primary: var(--primary);
+    --sidebar-primary-foreground: var(--primary-foreground);
+    --sidebar-accent: var(--accent);
+    --sidebar-accent-foreground: var(--accent-foreground);
+    --sidebar-border: var(--border);
+    --sidebar-ring: var(--ring);
 }
 
 .dark {
@@ -100,7 +129,7 @@
     --popover-foreground: rgba(255, 255, 255, 0.85);
 
     --primary: #ffffff;
-    --primary-foreground: rgba(0, 0, 0, 0.83);
+    --primary-foreground: rgba(0, 0, 0, 0.8);
 
     --secondary: #1a1a1a;
     --secondary-foreground: rgba(255, 255, 255, 0.85);
@@ -108,15 +137,19 @@
     --muted: #1a1a1a;
     --muted-foreground: rgba(255, 255, 255, 0.55);
 
-    --accent: #1a1a1a;
+    --accent: rgba(255, 255, 255, 0.08);
     --accent-foreground: rgba(255, 255, 255, 0.85);
+    --accent-secondary: rgba(255, 255, 255, 0.14);
+
+    --bright: #ff5900;
+    --bright-foreground: #ffffff;
 
     --destructive: #ed6f68;
 
-    --border: #2e2e2e;
-    --input: #2e2e2e;
+    --border: var(--accent);
+    --input: var(--accent-secondary);
 
-    --ring: #ff5900;
+    --ring: var(--bright);
 
     --chart-1: #3f96f3;
     --chart-2: #3aa65e;
@@ -124,8 +157,24 @@
     --chart-4: #e96e3a;
     --chart-5: #a27aff;
 
-    --glassy: rgba(255, 255, 255, 0.08);
-    --glassy-secondary: rgba(255, 255, 255, 0.14);
+    --sidebar: var(--background);
+    --sidebar-foreground: var(--foreground);
+    --sidebar-primary: var(--primary);
+    --sidebar-primary-foreground: var(--primary-foreground);
+    --sidebar-accent: var(--accent);
+    --sidebar-accent-foreground: var(--accent-foreground);
+    --sidebar-border: var(--border);
+    --sidebar-ring: var(--ring);
+}
+
+@layer base {
+    * {
+        @apply border-border outline-ring/50;
+    }
+
+    body {
+        @apply bg-background text-foreground;
+    }
 }
 
 @layer base {
@@ -188,7 +237,7 @@
 
     .mdx-content > p > img,
     .mdx-content > p > video {
-        @apply border-glassy w-full rounded-md border;
+        @apply border-accent w-full rounded-md border;
     }
 
     .mdx-content > p > a > img {
