--- a/src/app/fonts.css
+++ b/src/app/fonts.css
@@ -1,10 +1,22 @@
+/* TASA Orbiter */
 @font-face {
     font-family: 'TASA Orbiter';
     src:
-        url('/fonts/tasa-orbiter.woff2') format('woff2'),
-        url('/fonts/tasa-orbiter.ttf') format('truetype');
+        url('/fonts/tasa-orbiter/tasa-orbiter-variable.woff2') format('woff2'),
+        url('/fonts/tasa-orbiter/tasa-orbiter-variable.ttf') format('truetype');
     font-weight: 100 900;
     font-stretch: 75% 125%;
+    font-style: normal;
+    font-display: swap;
+}
+
+/* ABC Stefan */
+@font-face {
+    font-family: 'ABC Stefan';
+    src:
+        url('/fonts/abc-stefan/abc-stefan-bubble-tight.woff2') format('woff2'),
+        url('/fonts/abc-stefan/abc-stefan-bubble-tight.woff') format('woff');
+    font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
