--- a/src/app/fonts.css
+++ b/src/app/fonts.css
@@ -18,5 +18,5 @@
         url('/fonts/abc-stefan/abc-stefan-bubble-tight.woff') format('woff');
     font-weight: 400;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
